syntax = "proto3";
package stream;

// The Hadron stream controller interface.
service StreamController {
    // Open a metadata stream.
    rpc Metadata(MetadataRequest) returns (stream MetadataResponse);

    // Open a stream publisher channel.
    rpc StreamPublish(StreamPublishRequest) returns (StreamPublishResponse);

    // Open a stream subscriber channel.
    rpc StreamSubscribe(stream StreamSubscribeRequest) returns (stream StreamSubscribeResponse);

    // Open a pipeline subscriber channel.
    rpc PipelineSubscribe(stream PipelineSubscribeRequest) returns (stream PipelineSubscribeResponse);

    // Update the event data of the target event which can be a Stream or Pipeline event.
    rpc UpdateEventData(UpdateEventDataRequest) returns (UpdateEventDataResponse);
}

///////////////////////////////////////////////////////////////////////////////
// Components /////////////////////////////////////////////////////////////////

// An empty message.
message Empty {}

// An event record formatted according to the CloudEvents specification.
message Event {
    // The application defined ID of this event.
    //
    // See [`id`](https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#id).
    string id = 1;
    // The application defined source of this event.
    //
    // See [`source`](https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#source-1).
    string source = 2;
    // The CloudEvents specification version which the event uses.
    //
    // See [`specversion`](https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#specversion).
    string specversion = 3;
    // The type identifier of this event.
    //
    // See [`type`](https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#type).
    string type = 4;
    // The Hadron partition info where this event is recorded.
    //
    // This value is only populated after the event has been recorded to a Stream.
    EventPartition partition = 5;
    // Any additional optional attributes or extension attributes of this event.
    //
    // See [`optional attributes`](https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#optional-attributes)
    // and [`extension context attributes`](https://github.com/cloudevents/spec/blob/v1.0.1/spec.md#extension-context-attributes).
    map<string, string> optattrs = 6;
    // The data payload of this event.
    bytes data = 7;
}

// Partition info of the Stream partition where an event resides.
message EventPartition {
    // The Stream partition where this event resides, which always starts at 0.
    uint32 partition = 1;
    // The offset of this event on the partition.
    uint64 offset = 2;
}

// The replication acknowledgement mode to use for a write batch.
enum WriteAck {
    // Wait until all in-sync replicas have acknowledged the write.
    ALL = 0;
    // Wait until a majority of in-sync replicas have acknowledged the write.
    MAJORITY = 1;
    // Do not wait for replica write acknowledgement.
    NONE = 2;
}

//////////////////////////////////////////////////////////////////////////////
// Stream Publish ////////////////////////////////////////////////////////////

// A request to publish data to a stream.
message StreamPublishRequest {
    // The batch of entries to publish.
    repeated Event batch = 1;
    // Fsync after writing batch.
    bool fsync = 2;
    // The replication acknowledgement mode for the batch.
    WriteAck ack = 3;
}

// A response from publishing data to a stream.
message StreamPublishResponse {
    // The offset of the last entry to be written to the stream.
    uint64 offset = 1;
}

//////////////////////////////////////////////////////////////////////////////
// Stream Subscribe //////////////////////////////////////////////////////////

// A request to subscribe to data on a stream.
message StreamSubscribeRequest {
    oneof action {
        // Setup a stream subscription.
        StreamSubscribeSetup setup = 1;
        // All events delivered on the last payload have been processed.
        Empty ack = 2;
        // An error has taken place during subscriber processing, and the delivered batch was not
        // successfully processed.
        //
        // The given error message will be recorded by the server for observability.
        string nack = 3;
    }
}

// A request to setup a stream subscriber channel.
message StreamSubscribeSetup {
    // The name of the subscriber.
    string group_name = 1;
    // A bool indicating if this subscription should be considered durable; if `false`, then its
    // offsets will be held in memory only.
    bool durable = 2;
    // The maximum batch size for this subscriber.
    uint32 max_batch_size = 3;

    reserved 4 to 9;
    // The starting point from which to begin the subscription, if the subscription has no
    // previously recorded offsets.
    oneof starting_point {
        Empty beginning = 10;
        Empty latest = 11;
        uint64 offset = 12;
    }
    reserved 13 to 20;
}

// A delivery of data for a stream subscription.
message StreamSubscribeResponse {
    // A batch of records for subscriber processing.
    repeated Event batch = 1;
    // The last offset included in this batch.
    uint64 last_included_offset = 2;
}

//////////////////////////////////////////////////////////////////////////////
// Pipeline Sub //////////////////////////////////////////////////////////////

// A request to setup a pipeline stage subscriber channel.
message PipelineSubscribeRequest {
    // The name of the pipeline to process.
    string pipeline = 1;

    reserved 2 to 9; // For future use.

    oneof action {
        // Setup the subscriber channel to process the given stage name.
        string stage_name = 10;
        // An acknowledgement of successful processing of this stage and its inputs, along with the
        // required stage output of the stage.
        PipelineStageOutput ack = 11;
        // An error has taken place during subscriber processing, and the delivered data was not
        // successfully processed.
        //
        // The given error message will be recorded by the server for observability.
        string nack = 12;
    }
}

// A payload of pipeline stage inputs for a particular pipeline stage.
message PipelineSubscribeResponse {
    // The name of the pipeline stage to which this delivery corresponds.
    string stage = 1;
    // The root event which triggered this pipeline instance.
    Event root_event = 2;
    // A mapping of pipeline stage inputs based on the definition of this pipeline stage.
    //
    // Every key will be the name of the corresponding pipeline stage output which has been declared
    // as an input dependency for this stage.
    map<string, Event> inputs = 3;
}

// The output of a successful pipeline stage consumption.
message PipelineStageOutput {
    // The base output of the corresponding pipeline stage.
    Event output = 1;
}

///////////////////////////////////////////////////////////////////////////////
// Metadata ///////////////////////////////////////////////////////////////////

// A request to open a metadata stream.
message MetadataRequest {}

// A response to a metadata subscription setup request.
message MetadataResponse {
    // All partitions of the stream.
    repeated StreamPartition partitions = 1;
}

// Stream partition metadata.
message StreamPartition {
    // The partition number of this partition.
    uint32 partition = 1;
    // The Kubernetes internal address of this partition.
    string internal = 2;
    // The Kubernetes external address of this partition, or empty string if not externally accessible.
    string external = 3;
}

///////////////////////////////////////////////////////////////////////////////
// KV API /////////////////////////////////////////////////////////////////////

// A request to update the data payload of an event.
message UpdateEventDataRequest {
    // The new data payload to overwrite the target event with.
    bytes data = 1;

    reserved 2 to 9;

    oneof target {
        // The target event to update is a Stream event.
        //
        // NOTE WELL that for Pipeline events, the root event is copied over to the running
        // Pipeline, so updating the root event on the Stream will not update Pipelines.
        StreamEventLocation stream_event = 10;
        // The target event to update is a Pipeline event and its corresponding
        // stage is specified by this string value.
        //
        // NOTE WELL that for Pipeline events, the root event is copied over to the running
        // Pipeline, so updating the root event on the Stream will not update Pipelines.
        PipelineEventLocation pipeline_event = 11;
    }

    message StreamEventLocation {
        // The Stream partition where this event resides, which always starts at 0.
        uint32 partition = 1;
        // The offset of this event on the partition.
        uint64 offset = 2;
    }

    message PipelineEventLocation {
        // The Stream partition where this event resides, which always starts at 0.
        uint32 partition = 1;
        // The offset of this event on the partition.
        uint64 offset = 2;
        // The name of the Pipeline which the event is a part of.
        string pipeline = 3;

        reserved 4 to 9;

        // The stage of the Pipeline event to update.
        oneof stage {
            // The event to update is the root event.
            Empty root_event = 10;
            // The event to update the is event which was produced as
            // the output of the given stage name.
            string stage_name = 11;
        }
    }
}

// A response from updating the data payload of an event.
message UpdateEventDataResponse {}
